# solar-scout

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOY.md  cli.md
scripts/: lan-isolate.sh
solar_scout/: __init__.py  buildings.py  cli.py  demo_seed.py  detect.py  disclaimer.py  economics.py  geo.py  imagery.py  layout.py  letter.py  lod2.py  market.py  ml_detect.py  pipeline.py  report.py  roofs.py  sun.py  viewer3d.py  visitors.py  webui.py
solar_scout/webui_static/: admin.html  index.html  partner.html
